--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,17 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="JavaApplication1" default="default" basedir=".">
-    <description>Builds, tests, and runs the project JavaApplication1.</description>
+<project name="Sistema" default="default" basedir=".">
+    <target name="-post-jar">
+        <jar jarfile="${dist.jar}" update="true">
+            <zipfileset src="C:\Users\Rolando Andre\Desktop\lib\mssql-jdbc-6.4.0.jre8.jar" excludes="META-INF/*" />
+            <zipfileset src="C:\Users\Rolando Andre\Desktop\lib\jcalendar-1.3.3.jar" excludes="META-INF/*" />
+            <manifest>
+                <attribute name="Main-Class" value="gui.Frm" />
+            </manifest>
+        </jar>
+    </target>
+    <description>Builds, tests, and runs the project Sistema.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +67,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="JavaApplication1-impl.jar">
+        <target name="run" depends="Sistema-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
